# rust-prometheus

./: Cargo.toml  Makefile  build.rs
proto/: proto_model.rs
src/: errors.rs
