[package]
name = "prometheus"
version = "0.8.0"
license = "Apache-2.0"
keywords = ["prometheus", "metrics"]
authors = ["overvenus@gmail.com", "siddontang@gmail.com", "vistaswx@gmail.com"]
description = "Prometheus instrumentation library for Rust applications."
readme = "README.md"
repository = "https://github.com/pingcap/rust-prometheus"
homepage = "https://github.com/pingcap/rust-prometheus"
documentation = "https://docs.rs/prometheus"
edition = "2018"

[badges]
travis-ci = { repository = "pingcap/rust-prometheus" }

[package.metadata.docs.rs]
features = ["nightly"]

[features]
default = ["protobuf"]
nightly = ["libc"]
push = ["reqwest", "libc", "protobuf"]
process = ["libc", "procfs"]
gen = ["protobuf-codegen-pure"]

[dependencies]
cfg-if = "0.1"
fnv = "1.0"
lazy_static = "1.4"
libc = { version = "0.2", optional = true }
protobuf = { git = "https://github.com/stepancheg/rust-protobuf.git", optional = true, ref = "c30783ecb9a79d8dc039767b8752038ddebee941", features = ["with-serde"] }
reqwest = { version = "0.10", features = ["blocking"], optional = true }
spin = "0.5.2"
thiserror = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.7", optional = true, default-features = false }

[dev-dependencies]
getopts = "0.2"
hyper = "0.13"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
protobuf-codegen-pure = { git = "https://github.com/stepancheg/rust-protobuf.git", optional = true, ref = "0a18003e527543daff63697a0f45b813c50d04d1" }

[workspace]
members = ["static-metric"]
